Fixed spacing between bet-info

--- a/src/widgets/game/info/style.scss
+++ b/src/widgets/game/info/style.scss
@@ -22,7 +22,7 @@ game-info {
         width: calc(50% - 1rem);
 
         @media ($medium) {
-          width: calc(25% - 1rem);
+          width: calc(25% - 1.5rem);
         }
       }
 
